--- a/scss/components/_mobile-nav.scss
+++ b/scss/components/_mobile-nav.scss
@@ -189,9 +189,11 @@
   line-height: 1em;
   font-weight: bold;
   border-radius: 50%;
-  position: absolute;
-  right: 10px;
-  bottom: 6px;
+  float: right;
+  position: relative;
+  top: -27px;
+  right: 5px;
+  z-index: 20;
 
   &::before {
     content: none;
